BCHT-73: Generic Details Page Spacing Fixes

--- a/web/themes/custom/bcht/src/scss/base/_base.scss
+++ b/web/themes/custom/bcht/src/scss/base/_base.scss
@@ -121,7 +121,7 @@ p {
 .component__wrapper {
   margin-bottom: 24px;
   @include breakpoint(small-desktop) {
-    margin-bottom: 36px;
+    margin-bottom: 32px;
   }
   @include breakpoint(desktop) {
     margin-bottom: 48px;
