--- a/web/themes/custom/bcht/src/scss/base/_container.scss
+++ b/web/themes/custom/bcht/src/scss/base/_container.scss
@@ -7,7 +7,7 @@
   max-width: 840px;
   margin: 0 auto 24px;
   @include breakpoint(small-desktop) {
-    margin: 0 auto 36px;
+    margin: 0 auto 32px;
   }
   @include breakpoint(desktop) {
     margin: 0 auto 48px;
